# WageringSystem

./: BettingAgent.py  DeploymentPlan.txt  ProductionBettor.py  Results Plotting.ipynb
Agent/: AgentController.py  AgentModel.py  BetAgent.py  RequestsAgentController.py  SeleniumAgentController.py  ValueMonitor.py  exchange_odds_request.py  leakage_detection.py
Betting/: Bet.py  BetEvaluator.py  BetResult.py  BettingSlip.py  Bettor.py  DynamicKellyBettor.py  EVSingleBettor.py  ExactaBettor.py  FavoriteBettor.py  FirstHorseBettor.py  MultiKellyBettor.py  RandomBettor.py  SingleKellyBettor.py  StaticKellyBettor.py  TrifectaBettor.py  WinBettor.py
Control/: BetController.py
DataAbstraction/: FormGuide.py  FormGuideFactory.py  FormTable.py  Horse.py  Jockey.py  PastForm.py  RaceCard.py  RaceCardFactory.py  RawRaceCardInjector.py  WinTimeFactory.py  WinTimesFactory.py  WritableHorse.py  WritableRaceCard.py  filter_raw_race_cards.py  relevance_calculators.py  time_form_injection.py
DataCollection/: DayCollector.py  FormGuide.py  FormGuideFactory.py  InitialOddsCollector.py  PastRacesCollector.py  PastRacesContainer.py  RaceCardFactory.py  RaceCardsCollector.py  RaceHistory.py  RaceHistoryCollector.py  RawRaceCard.py  RawRaceCardFactory.py  RawRaceCardsCollector.py  Scraper.py  TestDataCollector.py  TrainDataCollector.py  (+2 more)
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs  stream_data.rs
rust_lib/src/stream_data/: category_calculators.rs  feature_extractor.rs  feature_manager.rs  file_reading.rs  value_calculator.rs
rust_lib/src/stream_data/file_reading/: deserialize.rs
(+328 files in other folders)
